<resources>
    <string name="app_name">Ракъаикъ Къуран</string>
    <string name="action_night_mode">Ночной режим</string>
    <string name="action_settings">Настройки</string>
    <string name="action_about_us">О нас</string>
    <string name="action_rate_app">Оценить</string>
    <string name="action_share">Поделиться</string>

    <string name="about_us_text">
        <b>JMApps</b> - серия бесплатных и безрекламных андроид-приложений для мусульман.\n\n

        Вы можете следить за обновлением старых и изданием новых приложений в наших соцсетях:\n\n

        ВКонтакте: www.vk.com/JMApps\n
        Telegram: t.me/JMApps\n
        Facebook: www.facebook.com/JMAppsM\n
        Instagram: www.instagram.com/dev_muslim\n\n

        По всем вопросам, предложениям и скритикой можете писать нам на почту:
        JMAppsMuslim@gmail.com или в Telegram: t.me/dev_muslim
    </string>
    <string name="action_text_size">Размер текста</string>
    <string name="action_chapters">Главы</string>
</resources>