<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_night_mode"
        android:icon="@drawable/ic_night_mode"
        android:orderInCategory="1"
        android:title="@string/action_night_mode"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="2"
        android:title="@string/action_settings"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_about_us"
        android:orderInCategory="3"
        android:title="@string/action_about_us"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_rate"
        android:orderInCategory="4"
        android:title="@string/action_rate_app"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_share"
        android:orderInCategory="5"
        android:title="@string/action_share"
        app:showAsAction="never" />
</menu>